@@ -243,7 +243,7 @@ p, li { white-space: pre-wrap; }
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Arial','Arial'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:10px; margin-bottom:10px; margin-left:5px; margin-right:5px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:600;&quot;&gt;Preguntas y respuestas frecuentes&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Por qué debo poner obligatoriamente mí usuario y contraseña del sitio de Picta?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Es obligatorio porque para obtener las listas de reproducción del sitio y descargar sólo puede ser con un usuario registrado.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Se guardan de forma segura los datos?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Si, la contraseña se guarda encriptada.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Puedo conectarme a través de un Proxy con usuario y contraseña?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: La aplicación de momento permite conectarse usando un proxy por la dirección IP y puerto. La autenticación con usuario y contraseña es utilizando el esquema &lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:600;&quot;&gt;Básica&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;. Si utiliza otro esquema para la autenticación, le recomendamos que use algún programa que proxifique su conexión como Proxifier, ProxyCap u algun otro. Quizás en futuras versiones se implemente otros esquemas de autenticación.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Puedo usar este programa en sistemas que sean de 32 bits?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Lamentablemente no, el programa picta-dl está compilado solo para versiones de 64bits de Windows&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;Tengo Windows 10 version 2004 recien instalado y me da problemas al descargar&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Si, parece que las versiones recientes de Windows 10 cuando el sistema está recien instalado sin parches de seguridad da problemas de certificados de conexión.&lt;br /&gt;&lt;br /&gt; &lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:600;&quot;&gt;Nota:&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt; A partir de la versión de &lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; text-decoration: underline;&quot;&gt;Windows 10 20H2&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt; (actualización de octubre del 2020) ya no tiene este problema.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Cómo creo las listas de reproducción para descargarlas?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: En el sitio de Picta puede crear listas personalizadas con los videos que Ud. seleccione, en cada video le aparecerá un icono para agregar los contenidos a una lista ya creada o si no tiene ninguna puede crearlas en ese momento y adicionarlos, posteriormente puede acceder a esa lista desde su perfil y pasar la URL de esta a este programa y después de procesarla verá todo el contenido y la podrá descargar. &lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;img src=&quot;:/Ayuda/icono_de_lista.png&quot; /&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Puedo descargar más de una lista de reproducción?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Si, cuando quiera descargar una lista solo pegue la URL, procese, descargue y así por cada lista que tenga creada o de las que ya están creadas en el sitio.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Cómo identifico las listas de reproducción en el sitio de Picta?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Las listas creadas en el sitio por las personas que suben contenidos a los canales se pueden identificar por el icono que se muestra a la derecha donde se ve la lista de los vídeos que contiene, cuando copia esa URL y la pasa a esta aplicación y la procesa verá el listado de los mismos, aquí una imagen de una lista de reproducción: &lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;img src=&quot;:/Ayuda/picta_lista_canal.png&quot; /&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Debo instalar algo adicional para que funcione esta aplicación?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: No, ya todo lo necesario para funcione viene con ella, el picta-dl y el FFmpeg para procesar los vídeos.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:10px; margin-bottom:10px; margin-left:5px; margin-right:5px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:600;&quot;&gt;Preguntas y respuestas frecuentes&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Por qué debo poner obligatoriamente mí usuario y contraseña del sitio de Picta en las Listas de Reproducción?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Es obligatorio porque para obtener las listas de reproducción del sitio y descargar sólo puede ser con un usuario registrado.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Se guardan de forma segura los datos?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Si, la contraseña se guarda encriptada.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Puedo conectarme a través de un Proxy con usuario y contraseña?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: La aplicación de momento permite conectarse usando un proxy por la dirección IP y puerto. La autenticación con usuario y contraseña es utilizando el esquema &lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:600;&quot;&gt;Básica&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;. Si utiliza otro esquema para la autenticación, le recomendamos que use algún programa que proxifique su conexión como Proxifier, ProxyCap u algun otro. Quizás en futuras versiones se implemente otros esquemas de autenticación.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Puedo usar este programa en sistemas que sean de 32 bits?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Actualmente si puede usar la GUI en sistemas de 32 bits, el programa picta-dl ya tiene un compilado para versiones de 32bits de Windows, puede descargarlo desde aquí: &lt;/span&gt;&lt;a href=&quot;https://github.com/oleksis/picta-dl/releases/latest&quot;&gt;&lt;span style=&quot; font-family:'Arial'; text-decoration: underline; color:#0000ff;&quot;&gt;https://github.com/oleksis/picta-dl/releases/latest&lt;/span&gt;&lt;/a&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;.   Debe descargar el ejecutable picta-dl_x86.exe renombrarlo a picta-dl.exe y sustituirlo por el que está en: &amp;quot;C:\Users\SU_USUARIO\AppData\Roaming\Picta-dl_GUI&amp;quot; con eso ya debe poder usar la app en sistemas de 32bits en Windows &lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;Tengo Windows 10 version 2004 recien instalado y me da problemas al descargar&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Si, parece que las versiones recientes de Windows 10 cuando el sistema está recien instalado sin parches de seguridad da problemas de certificados de conexión.&lt;br /&gt;&lt;br /&gt; &lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:600;&quot;&gt;Nota:&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt; A partir de la versión de &lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; text-decoration: underline;&quot;&gt;Windows 10 20H2&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt; (actualización de octubre del 2020) ya no tiene este problema.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Cómo creo las listas de reproducción para descargarlas?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: En el sitio de Picta puede crear listas personalizadas con los videos que Ud. seleccione, en cada video le aparecerá un icono para agregar los contenidos a una lista ya creada o si no tiene ninguna puede crearlas en ese momento y adicionarlos, posteriormente puede acceder a esa lista desde su perfil y pasar la URL de esta a este programa y después de procesarla verá todo el contenido y la podrá descargar. &lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;img src=&quot;:/Ayuda/icono_de_lista.png&quot; /&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Puedo descargar más de una lista de reproducción?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Si, cuando quiera descargar una lista solo pegue la URL, procese, descargue y así por cada lista que tenga creada o de las que ya están creadas en el sitio.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Cómo identifico las listas de reproducción en el sitio de Picta?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Las listas creadas en el sitio por las personas que suben contenidos a los canales se pueden identificar por el icono que se muestra a la derecha donde se ve la lista de los vídeos que contiene, cuando copia esa URL y la pasa a esta aplicación y la procesa verá el listado de los mismos, aquí una imagen de una lista de reproducción: &lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;img src=&quot;:/Ayuda/picta_lista_canal.png&quot; /&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Debo instalar algo adicional para que funcione esta aplicación?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: No, ya todo lo necesario para funcione viene con ella, el picta-dl y el FFmpeg para procesar los vídeos.&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Arial'; font-weight:496;&quot;&gt;¿Puedo descargar vídeos de Youtube?&lt;/span&gt;&lt;span style=&quot; font-family:'Arial';&quot;&gt;&lt;br /&gt;&lt;br /&gt;Respuesta: Si, actualmente la GUI permite descargar vídeos de Youtube.com, Youtu.be y m.youtube.com&lt;br /&gt;&lt;br /&gt;&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="textInteractionFlags">
           <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
